examples/iql/32_math/06_clamp.iql.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Authenticated as: admin
Current knowledge graph: default

> .kg create test_clamp_n32t06
Knowledge graph 'test_clamp_n32t06' created.
Switched to knowledge graph: test_clamp_n32t06
> .kg use test_clamp_n32t06
Switched to knowledge graph: test_clamp_n32t06
> +values[(-5,), (0,), (5,), (10,), (15,), (20,)]
Inserted 6 fact(s) into 'values'.
> clamped(V, C) <- values(V), MinV = 0, MaxV = 10,
Unsafe rule 'clamped': Head variable(s) C not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
> C = V, V >= MinV, V <= MaxV
Parse error: Unrecognized statement: C = V, V >= MinV, V <= MaxV
> clamped(V, C) <- values(V), C = 0, V < 0
┌────┬───┐
│ X  │ Y │
├────┼───┤
│ -5 │ 0 │
└────┴───┘
1 rows
(session: 1 rule(s))
> clamped(V, C) <- values(V), C = 10, V > 10
┌────┬────┐
│ X  │ Y  │
├────┼────┤
│ -5 │  0 │
│ 15 │ 10 │
│ 20 │ 10 │
└────┴────┘
3 rows
(session: 2 rule(s))
> ?clamped(V, C)
┌────┬────┐
│ V  │ C  │
├────┼────┤
│ -5 │  0 │
│ 15 │ 10 │
│ 20 │ 10 │
└────┴────┘
3 rows
> .kg use default
Switched to knowledge graph: default
(Cleared 2 session rule(s), 0 session fact(s))
> .kg drop test_clamp_n32t06
Knowledge graph 'test_clamp_n32t06' dropped.
